--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,12 @@
     "name": "sylius/channel-bundle",
     "type": "symfony-bundle",
     "description": "Currencies and channel formatting engine bundle for Symfony.",
-    "keywords": ["cash", "currency", "channel", "currencies"],
+    "keywords": [
+        "cash",
+        "currency",
+        "channel",
+        "currencies"
+    ],
     "homepage": "https://sylius.com",
     "license": "MIT",
     "authors": [
@@ -21,45 +26,48 @@
     ],
     "require": {
         "php": "^7.3",
-
         "sylius/channel": "^1.6",
         "sylius/resource-bundle": "^1.6",
         "symfony/framework-bundle": "^4.4"
     },
     "require-dev": {
-        "matthiasnoback/symfony-dependency-injection-test": "^3.0",
+        "doctrine/orm": "^2.7",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "phpspec/phpspec": "^6.1",
-        "phpunit/phpunit": "^7.0",
-        "twig/twig": "^2.0",
-        "doctrine/orm": "^2.5",
+        "phpunit/phpunit": "^8.5",
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0",
+        "symfony/browser-kit": "^4.4",
         "symfony/dependency-injection": "^4.4",
         "symfony/form": "^4.4",
-        "symfony/browser-kit": "^4.4",
-        "polishsymfonycommunity/symfony-mocker-container": "^1.0"
+        "twig/twig": "^2.12"
     },
     "config": {
         "bin-dir": "bin"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.6-dev"
+        }
+    },
     "autoload": {
-        "psr-4": { "Sylius\\Bundle\\ChannelBundle\\": "" }
+        "psr-4": {
+            "Sylius\\Bundle\\ChannelBundle\\": ""
+        }
     },
     "autoload-dev": {
         "psr-4": {
             "Sylius\\Bundle\\ChannelBundle\\spec\\": "spec/"
         },
-        "classmap": ["test/app/AppKernel.php"]
+        "classmap": [
+            "test/app/AppKernel.php"
+        ]
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "repositories": [
         {
             "type": "path",
             "url": "../../*/*"
         }
     ],
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.6-dev"
-        }
-    }
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
