--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "php": "^7.3",
         "sylius/channel": "^1.6",
         "sylius/resource-bundle": "^1.7",
-        "symfony/framework-bundle": "^4.4"
+        "symfony/framework-bundle": "^4.4 || ^5.2"
     },
     "require-dev": {
         "doctrine/orm": "^2.7",
@@ -36,9 +36,9 @@
         "phpspec/phpspec": "^7.0",
         "phpunit/phpunit": "^8.5",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
-        "symfony/browser-kit": "^4.4",
-        "symfony/dependency-injection": "^4.4",
-        "symfony/form": "^4.4",
+        "symfony/browser-kit": "^4.4 || ^5.2",
+        "symfony/dependency-injection": "^4.4 || ^5.2",
+        "symfony/form": "^4.4 || ^5.2",
         "twig/twig": "^2.12"
     },
     "config": {
